Fix too short dropdown selection

--- a/static/css/custom_styling.css
+++ b/static/css/custom_styling.css
@@ -91,6 +91,7 @@ h2 {
 
 form .form-group * {
 	font-size: 24px;
+	height: auto;
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
